[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/!Scenes/LevelEndTrigger.gd" type="Script" id=1]
[ext_resource path="res://Levels/!Classes/LevelEndArrow.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 17.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 18 )

[node name="LevelEndTrigger" type="Area2D"]
z_index = 10
collision_layer = 0
collision_mask = 16
monitoring = false
monitorable = false
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.101961, 0.0980392, 0.196078, 1 )
polygon = PoolVector2Array( -32, -40, 16, -40, 16, 40, -32, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -15.5, -0.5 )
shape = SubResource( 1 )

[node name="Arrow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.52549 )
position = Vector2( 45, 0.5 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.66

[node name="InvisibleWall" type="StaticBody2D" parent="."]

[node name="TopWall" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2( -8, -15 )
shape = SubResource( 2 )

[node name="BackWall" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2( -21, 0 )
shape = SubResource( 3 )

[node name="BottomWall" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2( -8, 15 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
